src/styles/aboutus.css
.about-us-page-container{
  width: 100vw;
  position: relative;
  padding-bottom: 321px;
}

.about-us-hero-section-container{
    margin-top: 32px;
    padding: 0 80px;
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    gap: 32px;
}

.about-us-hero-section-content-container{
    display: flex;
    flex-direction: column;
    gap: 32px;
}

.about-us-section-header{
    color: var(--primary-color);
    font-size: 48px; 
    letter-spacing: -1px;
}

.about-us-history-content-container{
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.about-us-history-subheader{
    color: var(--primary-color);
    font-size: 32px;
}

.about-us-history-text-container{
    max-width: 600px;
}
.about-us-history-text{
    color: var(--secondary-color);
    font-size: 18px;
    line-height: 32px;
}


.about-us-hero-section-img{
    height: 500px;
}


.about-us-mission-section-container{
    margin-top: 110px;
    padding: 0 30px;    
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.about-us-mission-section-header{
    font-size: 48px;
    letter-spacing: -1px;
    color: var(--primary-color);
}

.about-us-mission-section-content-container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 32px;
}

.about-us-mission-section-subheaders-container{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 56px;
    margin-top: 16px;
    background: white;
}


.about-us-mission-section-subheader{
    font-size:24px;
    color: var(--primary-color);
    transition: opacity 100ms ease-in-out;
    position: relative;
}

.about-us-mission-section-subheader:hover{
    cursor: pointer;
    opacity: .9
}

.active-subheader::before{
    content: '';
    display: block;
    height: 3px;
    border-radius: 10px;
    background: var(--primary-color);
    width: 100%;
    position: absolute;
    bottom: -10px;
    transition: all 200ms ease-in-out
}

.hidden-mission{
    display: none;
}

.about-us-mission-section-texts-container{
    font-size: 18px;
    letter-spacing: 1px;
    line-height: 32px;
    color: var(--secondary-color);
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 32px;
    max-width: 700px;
}

.about-us-values-section-container{
    margin-top: 110px;
    padding: 0 30px 0 30px;
}

.about-us-values-section-header-container{
    margin-bottom: 16px;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.about-us-values-section-header{
    color: var(--primary-color);
    font-size: 48px; 
    letter-spacing: -1px;
}

.about-us-values-section-cards-container{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 10px;
    overflow-x: scroll;
    overflow-y: hidden;
}

.about-us-values-section-card{
    position: relative;
    display: flex;
    justify-content: center;
    align-items: flex-end;
}

.about-us-values-section-image-container{
  width: 100%;
  height: 160px;
  position: relative;
}

.about-us-values-section-image{
    width: 350px;
    height: 160px;
    object-fit: cover;
}

.about-us-values-section-card-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
  }

.about-us-values-section-card-header-container{
    position: absolute;
    padding-bottom: 8px;
}

.about-us-values-section-card-header{
    color: white;
    font-size: 1.3rem;
    font-weight: 700;
}

@media (max-width: 1300px) {
    .about-us-history-text{
        font-size: 16px;
    }

    .about-us-hero-section-img{
        height: 400px;
    }

}


@media (max-width: 1150px){
    .about-us-section-header{
        font-size: 40px;
    }

    .about-us-history-subheader{
        font-size: 24px;
        font-weight: 900;
    }

    .about-us-history-text{
        line-height: 24px;
    }

    .about-us-hero-section-img{
        height: 350px;
    }

    .about-us-mission-section-header{
        font-size: 40px;
    }

    .about-us-mission-section-texts-container{
        font-size: 16px;
        line-height: 24px;
    }

    .about-us-mission-section-subheaders{
        font-size: 24px;
    }
.about-us-values-section-header{
    font-size: 40px;
}

}

@media (max-width: 1000px) {
.about-us-hero-section-container{
    padding: 0 30px;
}
    
    .about-us-hero-section-img-container{
        margin-top: 56px;
    }
    .about-us-hero-section-img{
        height: 300px;
    }

}

@media (max-width: 960px){
    .about-us-page-container{
        padding-bottom: 663px;
    }
    .about-us-section-header{
        font-size: 32px;
        font-weight: 900;
    }

    .about-us-history-subheader{
        font-size: 20px;
    }

    .about-us-history-text{
        font-size: 14px;    
    }

    .about-us-mission-section-header{
        font-size: 32px;
        font-weight: 900;
    }

    
    .about-us-mission-section-container {
        margin-top: 48px;
    }

    .about-us-mission-section-subheader{
        font-size: 20px;
    }

    .about-us-mission-section-texts-container{
        font-size: 14px;
    }

    .about-us-hero-section-container{
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .about-us-hero-section-content-container{
        justify-content: center;
        align-items: center;
    }

    .about-us-history-content-container{
        justify-content: center;
        align-items: center;
    }

    .about-us-history-text{
        text-align: center  ;
    }

    .about-us-hero-section-img-container{
        margin-top: 0;
    }
    
    .about-us-values-section-container{
        margin-top: 48px;
    }
    
    .about-us-values-section-header {
        font-size: 32px;
    }

    .about-us-values-section-image{
        width: 300px;
    }
}

@media (max-width: 430px) {
    
    .about-us-hero-section-img{
        height: 250px;
    }
    
}

